package seminarThree.view;

public interface IView {
    void run();
}
